<resources>
    <string name="app_name">Danahonet</string>

    <string name="fab_save">Save</string>
    <string name="fab_gallery">Open gallery</string>
    <string name="fab_hydro">Hydro pipeline</string>
    <string name="fab_gas">Gas pipeline</string>
    <string name="fab_sanitary">Sanitary pipeline</string>
    <string name="fab_rci">RCI</string>

    <string name="label_gallery">Gallery</string>

    <string name="hint_label_type_building">Tipo de edificacion</string>
    <string name="hint_label_floors_number">Numero de pisos</string>
    <string name="hint_label_height_floor">Altura entre pisos</string>
    <string name="hint_label_temperature">Temperatura</string>
    <string name="hint_label_level_social">Estracto</string>
    <string name="hint_label_total_apartments">Total apartamentos</string>
    <string name="hint_label_population">Dotacion poblacion</string>
    <string name="hint_label_tank_filling_time">Tiempo llenado de tanque</string>
    <string name="hint_label_measurer_location">Ubicacion de medidores</string>
    <string name="hint_label_hunter_units">Unidades de hunter</string>
    <string name="hint_label_measurer_capacity">Capacidad medidor(porcentaje)</string>

    <string name="button_label_accept">Aceptar</string>

</resources>
