<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/global_padding_normal"
        android:background="@android:color/white">


    <TextView
            android:id="@+id/labelTypeBuilding"
            android:layout_width="wrap_content"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/global_margin_normal"
            android:layout_marginTop="@dimen/global_margin_normal"
            android:text="@string/hint_label_type_building"
            android:layout_height="wrap_content"/>

    <Spinner
            android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
            android:id="@+id/spinnerTypeBuilding"
            android:layout_marginStart="@dimen/global_margin_normal"
            app:layout_constraintTop_toTopOf="@+id/labelTypeBuilding"
            app:layout_constraintStart_toEndOf="@id/labelTypeBuilding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/labelTypeBuilding"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputFloorsNumber"
            android:theme="@style/TextInputLayoutAppearance"
            app:layout_constraintTop_toBottomOf="@id/spinnerTypeBuilding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_label_floors_number">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textFloorsNumber"
                android:layout_width="match_parent"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputHeightFloor"
            app:layout_constraintTop_toBottomOf="@id/inputFloorsNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/spinnerMeasureType"
            android:layout_width="0dp"
            android:theme="@style/TextInputLayoutAppearance"
            android:layout_height="wrap_content"
            android:hint="@string/hint_label_height_floor">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textHeightFloor"
                android:layout_width="match_parent"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
            android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
            android:id="@+id/spinnerMeasureType"
            android:layout_marginStart="@dimen/global_margin_normal"
            app:layout_constraintTop_toTopOf="@+id/inputHeightFloor"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/inputHeightFloor"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTemperature"
            android:theme="@style/TextInputLayoutAppearance"
            app:layout_constraintTop_toBottomOf="@id/inputHeightFloor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_label_temperature">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textTemperature"
                android:layout_width="match_parent"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:layout_width="wrap_content"
            android:text="@string/button_label_accept"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAccept"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/inputTemperature"/>
</androidx.constraintlayout.widget.ConstraintLayout>